<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.rht.RegisterActivity">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/panels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_padding"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/round"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"
                    android:layout_weight="0.44" />
                <TextView
                    android:id="@+id/string_round_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_round_label"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_padding"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starts"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"
                    android:layout_weight="0.50" />
                <TextView
                    android:id="@+id/string_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_padding"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ends"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"
                    android:layout_weight="0.53" />
                <TextView
                    android:id="@+id/string_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"
                    android:layout_weight="3.20" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_padding"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvUid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.46"
                    android:paddingRight="25dp"
                    android:text="@string/prompt_uid"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/add_edit_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/string_uid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="25dp"
                    android:text="@string/uid"
                    android:textSize="@dimen/add_edit_textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_padding"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvTester"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_tester"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"
                    android:layout_weight="0.85" />
                <TextView
                    android:id="@+id/string_tester"
                    android:layout_width="168dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tester"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_padding"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvFacility"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_facility_name"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"/>
                <TextView
                    android:id="@+id/string_facility_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_facility_label"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_padding"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvProgram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_program"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"
                    android:layout_weight="0.34" />
                <TextView
                    android:id="@+id/string_program_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"
                    android:layout_weight="0.07" />

            </LinearLayout>

            <Button
                android:id="@+id/btnBack"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_back"
                android:textStyle="bold"
                android:background="@color/bg"
                android:textColor="@color/text" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
