<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.rht.RegUserInfoActivity">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/panels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_padding"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/round"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"
                    android:layout_weight="0.54" />
                <TextView
                    android:id="@+id/string_round_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_round_label"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"
                    android:layout_weight="0.08" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_padding"
                android:weightSum="1"
                android:layout_weight="0.57">

                <TextView
                    android:id="@+id/tvFacility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facility"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"
                    android:layout_weight="1.80" />
                <TextView
                    android:id="@+id/string_facility_label"
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:text="@string/string_facility_label"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"
                    android:layout_weight="0.30" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_padding"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvShipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shipper"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp" />
                <TextView
                    android:id="@+id/string_shipper_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_shipper_label"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/view_padding"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvDateShipped"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_shipped"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"
                    android:layout_weight="0.27" />
                <TextView
                    android:id="@+id/string_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_date_shipped_label"
                    android:textSize="@dimen/add_edit_textsize"
                    android:paddingRight="25dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/view_padding">

                <EditText
                    android:id="@+id/date_eceived"
                    android:hint="@string/date_received"
                    android:layout_width="wrap_content"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:gravity="left" />
                <ImageView
                    android:id="@+id/image_view_hire_date"
                    android:src="@android:drawable/ic_menu_my_calendar"
                    android:layout_weight="5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/panels_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/panels_received"
                    android:inputType="text"
                    android:padding="@dimen/view_padding"
                    android:textSize="@dimen/add_edit_textsize" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/condition"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/receiver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/receiver"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnReceive"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_submit"
                android:textStyle="bold"
                android:background="@color/accent_color"
                android:textColor="@color/text" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
